--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     </div>
     <div class="row-main d-flex align-items-center justify-content-center ">
       <div class="grid-container d-flex flex-wrap "></div>
+
+      <span id="final-message"></span>
     </div>
     <div class="row-footer">
       <h3 class="p-3 "> Made with &hearts; by Matteo</h3>
